# facis-fap-iot-ai

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE.md  README.md  SECURITY.md
services/ai-insight-service/: .gitignore  CONTRIBUTING.md  Dockerfile  NOTICE.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
services/ai-insight-service/config/: default.yaml  development.yaml  production.yaml  test.yaml
services/ai-insight-service/docs/: README.md  openapi.yaml
services/ai-insight-service/docs/api/: rest-api.md
services/ai-insight-service/docs/deployment/: deployment-operations.md  ops-runbook.md
services/ai-insight-service/docs/guides/: architecture.md  configuration.md  index.md  setup.md  testing.md  troubleshooting.md
services/ai-insight-service/helm/facis-ai-insight/: .helmignore  Chart.yaml  README.md  values.yaml
services/ai-insight-service/k8s/ai-insight-service/: deployment.yaml  prompt-templates-configmap.yaml
services/ai-insight-service/orce/: .gitignore  Dockerfile  README.md  entrypoint.sh  package-lock.json  package.json
services/ai-insight-service/orce/flows/: ai-insight-anomaly.json  ai-insight-city-status.json  ai-insight-energy-summary.json  ai-insight-latest.json  ai-insight-openapi.json  ai-insight-orce.json  ai-insight-outputs.json
services/ai-insight-service/orce/runtime/: .env.example  README.md
services/ai-insight-service/orce/subflows/: README.md  get-trino-token.subflow.json  run-anomaly.subflow.json  run-city-status.subflow.json  run-energy-summary.subflow.json  run-trino-query-city.subflow.json  run-trino-query-energy.subflow.json  run-trino-query.subflow.json
services/ai-insight-service/src/: __init__.py  config.py  main.py
services/ai-insight-service/src/analytics/: outliers.py  smart_city_correlation.py  trend_forecast.py
services/ai-insight-service/src/api/: __init__.py
services/ai-insight-service/src/data/: trino_client.py
services/ai-insight-service/src/llm/: __init__.py  client.py  context_builder.py  prompt_templates.py
services/ai-insight-service/src/observability/: audit_log.py  metrics.py
services/ai-insight-service/src/security/: __init__.py  hmac_middleware.py  hmac_signing.py  policy.py  rate_limit.py
services/ai-insight-service/src/services/: insight_orchestrator.py  net_grid_insight_service.py  smart_city_correlation_service.py  trend_forecast_service.py
services/ai-insight-service/src/storage/: __init__.py  insight_cache.py  output_store.py  trino_output_store.py
services/ai-insight-service/src/streaming/: __init__.py  anomaly_consumer.py
services/ai-insight-service/tests/: conftest.py  test_anomaly_consumer.py  test_api.py  test_hmac_signing.py  test_insight_cache.py  test_llm_client.py  test_orchestrator_fallback.py  test_outliers.py  test_output_store.py  test_policy_enforcement.py  test_prompt_templates.py  test_rate_limit.py  test_service.py  test_smart_city_correlation.py  test_smart_city_correlation_service.py  test_trend_forecast.py  test_trend_forecast_service.py  test_trino_auth.py  test_trino_output_store.py
services/ai-insight-service/tests/bdd/: test_ai_insight_generation_bdd.py
services/ai-insight-service/tests/integration/: conftest.py  test_ai_pipeline_integration.py
services/dsp-connector/: Dockerfile  README.md  pyproject.toml
services/dsp-connector/helm/facis-dsp-connector/: Chart.yaml  README.md  sync-flows.sh  values.yaml
services/dsp-connector/orce/: README.md
services/dsp-connector/orce/flows/: facis-dsp-state.json  facis-dsp-transfers.json
services/dsp-connector/orce/tests/: package.json
services/dsp-connector/src/: __init__.py  catalogue_store.py  main.py  models.py  transfer_store.py
services/dsp-connector/tests/: conftest.py  test_dsp_connector.py
services/sftp-ingestion-service/: Dockerfile  README.md  pyproject.toml
services/sftp-ingestion-service/helm/facis-sftp-ingestion/: Chart.yaml  README.md  sync-flows.sh  values.yaml
services/sftp-ingestion-service/orce/: README.md
services/sftp-ingestion-service/orce/flows/: facis-sftp-dlq.json  facis-sftp-observability.json  facis-sftp-parsers.json  facis-sftp-poller.json  (+1 more)
services/sftp-ingestion-service/src/: __init__.py  config.py  kafka_publisher.py  main.py  sftp_poller.py
services/sftp-ingestion-service/tests/: test_sftp_poller.py
services/simulation/: .dockerignore  .env.cluster.example  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE.md  README.md  SECURITY.md  docker-compose.cluster.yml  docker-compose.yml  pyproject.toml
services/simulation/certs/: README.md
services/simulation/config/: cluster.yaml  default.yaml  mosquitto.conf  production.yaml
services/simulation/docs/: README.md  api-usage.md
services/simulation/orce/: DEPRECATED.md  Dockerfile  entrypoint.sh  package.json  rdkafka-patch.js
services/simulation/scripts/: demo_cost_impact.py  demo_e2e.py  demo_event_dimming.py  demo_lakehouse.py  generate_presentation.py  generate_seed_datasets.py  materialize_gold.py  materialize_silver.py  provision_nifi_jdbc.sh  setup_lakehouse.py  setup_nifi.py  setup_nifi_mqtt_to_kafka.py  validate_lakehouse.py
services/simulation/src/: __init__.py  config.py  logging_config.py  main.py
services/simulation/tests/: conftest.py
simulation-service/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
simulation-service/config/: test.yaml
simulation-service/docs/: architecture.md  configuration.md  deployment.md  modbus-integration.md
simulation-service/src/: config.py  main.py
simulation-service/src/core/: __init__.py  clock.py  engine.py
simulation-service/src/models/: price.py  pv.py  weather.py
simulation-service/src/router/: __init__.py  message_router.py
simulation-service/src/simulators/: base.py
simulation-service/tests/: conftest.py
simulation-service/tests/bdd/: __init__.py
simulation-service/tests/integration/: test_modbus_server.py  test_rest_api.py
(+763 files in other folders)
