[project]
name = "facis-simulation-service"
version = "1.0.0"
description = "Deterministic simulation service for FACIS IoT & AI demonstrator"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "ATLAS IoT Lab GmbH"}
]
keywords = ["simulation", "iot", "energy", "modbus", "mqtt"]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "paho-mqtt>=2.0.0",
    "pymodbus>=3.6.0",
    "numpy>=1.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.0",
    "confluent-kafka>=2.3.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-bdd>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "black>=24.1.0",
    "types-PyYAML>=6.0.0",
    "testcontainers>=4.0.0",
    "httpx>=0.27.0",
]
demo = [
    "trino>=0.328.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "tabulate>=0.9.0",
]
lakehouse = [
    "trino>=0.328.0",
    "nipyapi>=0.19.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "tabulate>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["W293"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
